--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -4,14 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.etherealmobile.androidSharedPreferences.SettingsActivity">
+    tools:context="com.etherealmobile.androidSharedPreferences.SettingsActivity"
+    android:background="?attr/backgroundColor">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar_settings"
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
         android:elevation="0dp"
-        android:background="@color/colorPrimary"/>
+        android:background="?attr/colorPrimary"/>
 
     <FrameLayout
         android:layout_below="@id/toolbar_settings"
